--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,10 @@ nav img {
   border-radius: 10px;
 }
 
+.card img {
+  border-radius: 10px 10px 0px 0px;
+}
+
 .card svg {
   padding: 1rem 0 0 1rem;
   fill: #3da5d9;
